k8s-manifest/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: banking-ingress
  namespace: banking
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /

spec:
  rules:
    - host: banking.vintagecloud.in
      http:
        paths:
          -path: /
           pathtype: Prefix
            backend:
              service:
                name: frontend-svc
                port:
                  number: 80
    - host: api.bank.vintagecloud.in
      http:
        paths:
          -path: /
           pathtype: Prefix
           backend:
             service:
               name: backend-svc
               port:
                 number: 8080
